--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -43,7 +43,7 @@ jobs:
         run: echo "::set-output name=version::$(echo ${VERSION}-PRE-${{ steps.pr_number.outputs.nr }})"
 
   # image build&push
-  notification-proxy:
+  api:
     needs: [ "generate-version" ]
     runs-on: ubuntu-latest
 
